# vkmlrt

./: .clang-format  .clangd  .gitmodules  .trial.cpp.swp  CMakeLists.txt  CMakePresets.json  trial.cpp
apps/: CMakeLists.txt  square.h  trial.cpp
inc/: .rt.h.swp  .rt.h.un~  buf.h  buf.hpp  dev.hpp  ident.h  pgrm.h  pgrm.hpp  rt.h  rt.hpp  rt.h~
src/: CMakeLists.txt  rt.cpp  tmp.cpp
